hphp/hack/test/typecheck/using_trait_does_not_make_private_req_extends_properties_visible.php
<?hh

abstract class Base {
  private int $x = 0;
}

trait T {
  require extends Base;
}

class Child extends Base {
  use T;
  public function f(): int { return $this->x; }
}
